Starting edit element feature and some cleanups

--- a/panel/YCSSPanel.html
+++ b/panel/YCSSPanel.html
@@ -3,13 +3,16 @@
 	<head>
 	</head>
 	<body>
-		<select id="position">
-			<option>left</option>
-			<option>center</option>
-			<option>right</option>
-		</select>
+		<!--
+		   -<select id="position">
+		   -    <option>left</option>
+		   -    <option>center</option>
+		   -    <option>right</option>
+		   -</select>
+		   -->
 
-		<button id="doit">Do it!</button>
+		<button id="cssLint">Check for common/spec CSS problems</button>
+		<button id="editElement">Edit Element</button>
 
 		<div id="content"></div>
 		<script src="../messaging.js"></script>
